@@ -14,6 +14,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   e - TRQ-961/bugzilla-176 - add the configure option --with-hwloc-path=PATH
       to allow installing hwloc to a non-default location.
   c - fix a crash when using job dependencies that fail - TRQ-990
+  e - when running a job use cached address information instead of looking it up
+      each time.
 
 4.0.2
   e - Change so init.d script variables get set based on the configure command.
